to_fix.txt
(myenv)  ‚úė hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį ./zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

‚úĖ error: expected 'identifier', got '<'
   ‚ē≠‚ĒÄ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:13:38
   ‚Ēā   12  extern fn socket(domain: int, type_: int, protocol: int) -> int
   ‚Ēā   13  extern fn bind(sockfd: int, addr: ptr<void>, addrlen: int) -> int
   ‚Ēā                                            ^
   ‚Ēā                                            hint: add identifier here
   ‚ēį‚ĒÄ

‚úĖ error: expected ')', got '>'
   ‚ē≠‚ĒÄ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:13:43
   ‚Ēā   12  extern fn socket(domain: int, type_: int, protocol: int) -> int
   ‚Ēā   13  extern fn bind(sockfd: int, addr: ptr<void>, addrlen: int) -> int
   ‚Ēā                                                 ^
   ‚Ēā                                                 hint: add ) here
   ‚ēį‚ĒÄ

 aborting: 2 error(s)

  ūüí° fix errors and re-run: zxc /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

(myenv)  ‚úė hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį ./zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

‚úĖ error: expected 'identifier', got '<'
   ‚ē≠‚ĒÄ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:15:40
   ‚Ēā   14  extern fn listen(sockfd: int, backlog: int) -> int
   ‚Ēā   15  extern fn accept(sockfd: int, addr: ptr<void>, addrlen: ptr<int>) -> int
   ‚Ēā                                              ^
   ‚Ēā                                              hint: add identifier here
   ‚ēį‚ĒÄ

‚úĖ error: expected ')', got '>'
   ‚ē≠‚ĒÄ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:15:45
   ‚Ēā   14  extern fn listen(sockfd: int, backlog: int) -> int
   ‚Ēā   15  extern fn accept(sockfd: int, addr: ptr<void>, addrlen: ptr<int>) -> int
   ‚Ēā                                                   ^
   ‚Ēā                                                   hint: add ) here
   ‚ēį‚ĒÄ

 aborting: 2 error(s)

  ūüí° fix errors and re-run: zxc /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

(myenv)  ‚úė hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį 

----
----

- don allow users to name their functions as same as types or structs!!!
(myenv)  hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį ./zxc /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/pipes.zx

‚úĖ gcc compilation error ‚ÄĒ the generated C has a problem:

  /tmp/zx_2192766338.c:33:11: error: both ‚Äėlong long‚Äô and ‚Äėdouble‚Äô in declaration specifiers
     33 | long long double(long long x);
        |           ^~~~~~
  /tmp/zx_2192766338.c:33:18: error: expected identifier or ‚Äė(‚Äô before ‚Äėlong‚Äô
     33 | long long double(long long x);
        |                  ^~~~
  /tmp/zx_2192766338.c:36:11: error: both ‚Äėlong long‚Äô and ‚Äėdouble‚Äô in declaration specifiers
     36 | long long double(long long x) {
        |           ^~~~~~
  /tmp/zx_2192766338.c:36:18: error: expected identifier or ‚Äė(‚Äô before ‚Äėlong‚Äô
     36 | long long double(long long x) {
        |                  ^~~~
  /tmp/zx_2192766338.c: In function ‚Äėmain‚Äô:
  /tmp/zx_2192766338.c:45:28: error: expected expression before ‚Äėdouble‚Äô
     45 |     long long val = square(double(3LL));
        |                            ^~~~~~

ūüí° run 'zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/pipes.zx' to inspect the generated C

(myenv)  ‚úė hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį 

while: 

(myenv)  ‚úė hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį cat /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/pipes.zx
// Pipe operator demo
extern fn printf(fmt: str, ...) -> int;


fn double(x: int) -> int { return x * 2 };
fn square(x: int) -> int { return x * x };

my val = 3 |> double |> square; 
printf("\n3 |> double |> square = %lld\n", val);
(myenv)  hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį 
# but if i just change the function names, it all works fine;  XD!

---

also make a thing to import files from current dir or so like: use "./"::abc # this means "./zbc.zx"!

--

also when user choses type any as return value of a function then make the return value of that function , the type of the return stmt like:

fn abc() -> any {
   return 23.5444; // then return vlue must be float!
}
* also show a warning if any problems with type any of that function! dont justr assign every any var or fn with long long, try to learn the type of the var's value and then assign it a type in c code!
---

also add more comparig operators in if and match, to utomaticjly match strings or numbers!

also add some basic builtins like toint(), tostr(), ..., len() // to fnd lenght of string or list, and many more types like list and more!

---

when i use @ignore in a test, it shows this stupid error: "(myenv)  hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main Óāį ./zxc test /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/tests.zx

ūüß™ Found 3 test(s) in /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/tests.zx

‚úĖ Test compile error:
/tmp/zx_test_3915722938.c: In function ‚Äėmain‚Äô:
/tmp/zx_test_3915722938.c:71:32: error: expected ‚Äė)‚Äô before ‚Äėabc‚Äô
   71 |     fprintf(stderr, ZX_SKIP " "abc"\n");
      |            ~                   ^~~
      |                                )


ūüí° run 'zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/tests.zx' to inspect the generated C

(myenv)  ‚úė hmza@0root Óāį ~/workspaces/hamza/zx-lang/zenx-lang Óāį Óā† main ¬Ī Óāį 



"

in this code: "@test
fn test_addition() {
   assert 1 + 1 == 2, "math is broken";
}


@test
@args={"n":5}
@expect=11
@ignore
fn abc(n: int) -> any {
   return (n*2);
}

extern fn sleep(...) -> int 

@test
@benchmark
@expect=123
fn aaa() -> any {
   sleep(1);
   return 123;
}"